# rokuon-kun

./: .gitignore  2025-07-28-18-38-37-マイク配列_(Realtek(R)_Audio).pcm  Cargo.toml  README.md
locales/: en.ftl  ja.ftl
src/: effect.rs  i18n.rs  main.rs  record_page.rs  setting_page.rs
