[package]
name = "rokuon-kun"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
cpal = "0.16.0"
freya = "0.3.4"

hound = "3.5.1"
dioxus = { version = "0.6", features = ["macro", "hooks"], default-features = false }
nojson = "0.3.2"
flacenc = "0.5.0"
dioxus-i18n = "0.4.3"
unic-langid = "0.9"

[profile.release]
lto = true
opt-level = 3
debug = false